--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -272,7 +272,7 @@ ol, ul
       top: 4px
 
 .return-icon
-  fill: $product-page-text-color
+  fill: $product-page-text-color 
   height: 30px
   width: 30px
   
@@ -482,6 +482,7 @@ ol, ul
   -webkit-overflow-scrolling: touch
   +transition(all .5s cubic-bezier(.25,.1,.25,1))
   background-color: $background-color
+  color: $text-color
   font-size: 20px
   height: 100vh
   left: 0
@@ -501,6 +502,7 @@ ol, ul
     margin-right: auto
     
   .overlay-title
+    font-family: $secondary-font
     font-size: 16px
     text-align: center
     
