--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -7,6 +7,7 @@
     display: none
   
 .product-page-subtitle
+  font-family: $secondary-font
   font-size: 16px
   
   @media screen and (max-width: $break-medium) and (orientation: portrait)
@@ -92,6 +93,7 @@
     bottom: -40px
   
   .dot
+    background: $product-page-text-color
     border-radius: 0
     height: 2px
     width: 24px
